# scint

./: .gitignore  CMakeLists.txt
cmake/: tracy.cmake  vulkan.cmake
sandbox/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  application.cppm  option.cppm  types.cppm
tools/: ninjatracing  profile_build.sh
